<resources>
    <string name="app_name">WarungSkuy</string>
    <string name="welcome_message">Selamat Datang di WarungSkuy</string>
    <string name="tagline">Pesan Makanan Favoritmu!</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="home">Home</string>
    <string name="orders">Pesanan</string>
    <string name="profile">Profile</string>
    <string name="add_to_cart">Tambah</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="address">Alamat</string>
    <string name="phone">No. Handphone</string>
    <string name="confirm_order">Order Sekarang</string>
    <string name="order_success">Pesanan Berhasil!</string>
    <string name="history">Riwayat Pesanan</string>
</resources>